Fix the status bar nested inline blocks.
They were 1 - 2px too low due to nesting inline-blocks.

--- a/static/utilities.less
+++ b/static/utilities.less
@@ -43,6 +43,10 @@ div > .inline-block-tight:last-child {
   margin-right: 0;
 }
 
+.inline-block .inline-block {
+  vertical-align: top;
+}
+
 // Use left margin when it's in a float: right element.
 // Sets the margin correctly when inline blocks are hidden and shown.
 .pull-right {
